TEST_PROGRAMS/VALID/07/forloop.go
package main

func f(a int) int{

	a,b := 0,1
	for i:= 0; i<n ;i++ {
	a, b = b ,a+b
	}
	for {
		a=10
	}
	
	for b>1 {
	b+=1
	}
	return a
}

