TEST_PROGRAMS/INVALID/03/invalid_switch4.go
package main

func f() {
	switch tag {
	default:
		s3()
	case 0, 1, 2, 3:
		s1();
	}
	switch i := x.(type) { // type switch not allow in golite
	case x < 0:
		return -x
	default:
		return x
	}
	switch {
	
	}
}
